@@ -1,0 +1,16 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+	<Name>Test that generates sources for an XML schema with collections (where collection type is set to J2)</Name>
+	<Author>Werner Guttmann</Author>
+	<Comment>The generated class(es) should include various methods that use
+		'java.util.List' as signture type</Comment>
+	<Category>basic capability</Category>
+	<SourceGeneratorTest>
+		<Schema>test.xsd</Schema> 
+		<Root_Object random="false" dump="true">ListOfStrings</Root_Object>
+		<UnitTestCase>
+			<Name>Test Generation</Name>
+			<Input>input.xml</Input>
+		</UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
